Fixed site on mobile

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6980,7 +6980,7 @@ ul.navbar-right {
 }
 
 .parallax-2 {
-    height: 300px;
+    min-height: 300px;
     background-image: url("../images/AdobeStock_88840403.png")
 }
 
